package produkt;

public class AProdukt {
}
