package produkt;

public class Vare extends AProdukt{
    public int pris;

    public Vare(int pris) {
        this.pris = pris;
    }
}
